--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,4 @@
-
-<h1>Welcome to my app!</h1>
-<p>Sign up <%= link_to "here", "https://www.google.co.uk/?gfe_rd=cr&ei=ajcBVovXKtPH8gf98KCQDA"%>.</p>
+<div class="jumbotron">
+	<h1>Welcome to my app!</h1>
+	<p>Click here to <%= link_to "Sign up", "#", class: "btn btn-primary btn-lg" %></p>
+</div>
