--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="jumbotron center">
-	<h1>Welcome to my app!</h1>
+	<h1>Welcome to Invoice Butler!</h1>
 	<% if user_signed_in? %>
 	<% else %>
 		<p>
