--- a/app/assets/stylesheets/bootstrap_and_cust.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_cust.css.scss
@@ -8,7 +8,9 @@ $navbar-default-brand-color:      #c0392b;
 $brand-primary:                		#c0392b;
 $jumbotron-bg:                    white;
 
+@import 'bootstrap-sprockets';
 @import 'bootstrap';
+@import url("//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css");
 
 .center {
 	text-align: center;
@@ -18,6 +20,6 @@ $jumbotron-bg:                    white;
   font-weight: bold;
 }
 
-#remember_meBox{
-	margin-left: 0px;
+#remember_me_label{
+	padding-left: 0px;
 }
