--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -13,7 +13,7 @@
       <%= link_to image_tag(pin.image.url(:medium)), pin_path(pin) %>
       <div class="panel-body">
         <%= pin.description %><br>
-        <strong><%= pin.user.email if pin.user %></strong>
+        <strong><%= pin.user.company if pin.user %></strong>
           <% if pin.user == current_user %>
             <div class="user actions">
               <%= link_to edit_pin_path(pin) do %>
@@ -29,4 +29,8 @@
   <% end %>
 </div>
 
+<div class="center">
+  hi
+   <%= will_paginate @pins, renderer: BootstrapPagination::Rails %>
+</div>
 
