--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -8,14 +8,13 @@
       </div>
       <div class="panel-body">
         <p><%= @pin.description %></p>
-        <p><strong><%= @pin.user.email if @pin.user %></strong></p>
+        <p><strong><%= @pin.user.company if @pin.user %></strong></p>
 
         <% if @pin.user == current_user %>
          <%= link_to edit_pin_path(@pin) do %>
            <span class="glyphicon glyphicon-pencil"></span> Edit
           <% end %>
         <% end %>
-
       </div>
     </div>
   </div>
