--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -14,7 +14,7 @@
       <div class="panel-body">
         <%= pin.description %><br>
         <strong><%= pin.user.company if pin.user %></strong>
-          <% if pin.user == current_user %>
+          <% if current_user && pin.user == current_user %>
             <div class="user actions">
               <%= link_to edit_pin_path(pin) do %>
                 <span class="glyphicon glyphicon-pencil"></span> Edit
