remove table sort

--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -1,4 +1,4 @@
-<script src="sorttable.js"></script>
+
 <div class="center">
   <%= render 'layouts/dashboardpages' %>
 </div>
@@ -9,7 +9,7 @@
   <% end %>
 
 
-<table class="sortable">
+<table>
   <thead>
     <tr>
       <th>Description</th>
