sort and filter

--- a/app/views/pins/acceptedoffers.html.erb
+++ b/app/views/pins/acceptedoffers.html.erb
@@ -29,7 +29,7 @@
 </table>
 
 
-<div class="center">
+<!-- <div class="center">
    <%= will_paginate @pins, renderer: BootstrapPagination::Rails %>
 </div>
-
+ -->
