--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,6 +11,8 @@
  * file per style scope.
  *
  *= require_tree .
+ *= require jquery.ui.datepicker
  *= require_self
  *= require 'masonry/transitions'
+ *= require filter_form
  */
