--- a/app/views/pins/pendingoffers.html.erb
+++ b/app/views/pins/pendingoffers.html.erb
@@ -10,8 +10,8 @@
   <%= filter_form_for @q do |f| %>
   <%= hidden_field_tag :direction, params[:direction] %>
   <%= hidden_field_tag :sort, params[:sort] %>
-  <%= f.filter_input :description %>
-  <%= f.filter_input :created_at %>
+  <%= f.filter_input :created_at, as: :select, predicate: :gt %>
+  <%= f.filter_input :created_at, as: :select, predicate: :lt %>
   <%= f.button :submit, "Filter" %>
   <%= link_to "Clear", pendingoffers_path %>
 <% end %>
