--- a/app/views/layouts/_dashboardpages.html.erb
+++ b/app/views/layouts/_dashboardpages.html.erb
@@ -1,5 +1,6 @@
 <ul class="list-inline">
-	<li><%= link_to "Import Invoices", dashboard_path %></li>
+	<li><%= link_to "Dashboard", dashboard_path %></li>
+	<li><%= link_to "Import Invoices", importinvoices_path %></li>
 	<li><%= link_to "Pending Offers", pendingoffers_path %></li>
 	<li><%= link_to "Accepted Offers", acceptedoffers_path %></li>
 </ul>
