--- a/app/views/pins/pendingoffers.html.erb
+++ b/app/views/pins/pendingoffers.html.erb
@@ -15,14 +15,17 @@
   <%= filter_form_for @q do |f| %>
   <%= hidden_field_tag :direction, params[:direction] %>
   <%= hidden_field_tag :sort, params[:sort] %>
-  <%= f.filter_input :created_at, as: :date, predicate: :gt %>
-  <%= f.filter_input :created_at, as: :date, predicate: :lt %>
+  <%= f.filter_input :description %>
+  <%#= f.filter_input :description, as: :select %>
+  <%#= f.filter_input :created_at, as: :date, predicate: :gt %>
+  <%#= f.filter_input :created_at, as: :date, predicate: :lt %>
   <%= f.button :submit, "Filter" %>
   <%= link_to "Clear", pendingoffers_path %>
 <% end %>
 </div>
 
-<input id="datepicker">
+<!-- <input id="datepicker"> -->
+<br><br>
 
 <table class="invtable">
   <thead>
