--- a/app/views/pins/_form.html.erb
+++ b/app/views/pins/_form.html.erb
@@ -62,9 +62,14 @@
 
 
   <div class="form-group">
-    <%= f.submit "Add Invoice", class: "btn btn-primary" %>
+    <%#= f.submit "Add Invoice", class: "btn btn-primary" %>
+    <%= f.submit class: "btn btn-primary" %>
   </div>
 <% end %>
+
+
+
+
 
 
 
