--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -9,9 +9,11 @@
   <% end %>
 
 
+<%#= form_for('Pin', :as => 'pins', :url => delete_selected_pins_path) do |f| %>
 <table class="invtable">
   <thead>
     <tr>
+      <th><%= check_box_tag "select_all" %></th>
       <th><%= sortable "ref", "Ref" %></th>
       <th><%= sortable "suppler_ref", "Supplier Ref" %></th>
       <th><%= sortable "suppler_name", "Supplier Name" %></th>
@@ -33,6 +35,7 @@
   <tbody>
     <% @pins.each do |pin| %>
       <tr>
+        <th><%= check_box_tag "ids[]", pin.id %></th>
         <th><%= pin.ref %></th>
         <th><%= pin.suppler_ref %></th>
         <th><%= pin.suppler_name %></th>
@@ -57,6 +60,11 @@
   </tbody>
 </table>
 
+<br><br>
+<%#= f.button "Delete Multiple", data: { confirm: 'Are you sure?' }, class: "btn btn-primary" %>
+<%# end %>
+
+<br><br>
 
 
 <div class="center">
