pre batch actions

--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -61,7 +61,7 @@
 </table>
 
 <br><br>
-<%#= f.button "Delete Multiple", data: { confirm: 'Are you sure?' }, class: "btn btn-primary" %>
+<%#= f.button "Delete Multiple", method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-primary" %>
 <%# end %>
 
 <br><br>
