--- a/app/views/pins/pendingoffers.html.erb
+++ b/app/views/pins/pendingoffers.html.erb
@@ -40,6 +40,8 @@
       <th><%= sortable "invoice_curr", "Invoice Currency" %></th>
       <th><%= sortable "invoice_amount", "Invoice Amount" %></th>
       <th><%= sortable "status", "Invoice Status" %></th>
+      <th><%= sortable "supplier_email", "Offer Sent to" %></th>
+      <th><%= sortable "offer_sent_date", "Offer Sent Date" %></th>
       <th><%= sortable "prop_settlement_date", "Proposed Settlement Date" %></th>
       <th><%= sortable "offer_amount", "Offer Amount" %></th>
       <th><%= sortable "saving", "Potential Saving" %></th>
@@ -58,6 +60,8 @@
         <th><%= pin.invoice_curr %></th>
         <th><%= pin.invoice_amount %></th>
         <th><%= pin.status %></th>
+        <th><%= pin.supplier_email %></th>
+        <th><%= pin.offer_sent_date %></th>
         <th><%= pin.prop_settlement_date %></th>
         <th><%= pin.offer_amount %></th>
         <th><%= pin.saving %></th>        
