--- a/app/views/pins/acceptedoffers.html.erb
+++ b/app/views/pins/acceptedoffers.html.erb
@@ -22,7 +22,8 @@
       <th><%= sortable "prop_settlement_date", "Proposed Settlement Date" %></th>
       <th><%= sortable "offer_amount", "Offer Amount" %></th>
       <th><%= sortable "saving", "Potential Saving" %></th>
-      <th>Send Offer</th>
+      <th><%= sortable "offer_sent_date", "Offer Sent Date" %></th>
+      <th><%= sortable "offer_accepted_date", "Offer Accepted Date" %></th>
       <th>Edit</th>
       <th>Delete</th>
     </tr>
@@ -43,7 +44,8 @@
         <th><%= pin.prop_settlement_date %></th>
         <th><%= pin.offer_amount %></th>
         <th><%= pin.saving %></th>
-        <th><%= link_to "Send", "#" %></th>
+        <th><%= pin.offer_sent_date %></th>
+        <th><%= pin.offer_accepted_date %></th>
         <th><%= link_to edit_pin_path(pin) do %><span class="glyphicon glyphicon-pencil"></span> Edit<% end %></th>
         <th><%= link_to pin, method: :delete, data: { confirm: 'Are you sure?' } do %><span class="glyphicon glyphicon-trash"></span> Delete<% end %></th>
         
