--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -14,7 +14,7 @@
   <thead>
     <tr>
       <th><%= check_box_tag "select_all" %></th>
-      <th><%= sortable "ref", "Ref" %></th>
+      <th><%= sortable "ref", "Your Invoice Ref" %></th>
       <th><%= sortable "suppler_ref", "Supplier Ref" %></th>
       <th><%= sortable "suppler_name", "Supplier Name" %></th>
       <th><%= sortable "invoice_number", "Invoice Number" %></th>
