--- a/app/views/pins/pendingoffers.html.erb
+++ b/app/views/pins/pendingoffers.html.erb
@@ -30,7 +30,7 @@
 <table class="invtable">
   <thead>
     <tr>
-      <th><%= sortable "ref", "Ref" %></th>
+      <th><%= sortable "ref", "Your Invoice Ref" %></th>
       <th><%= sortable "suppler_ref", "Supplier Ref" %></th>
       <th><%= sortable "suppler_name", "Supplier Name" %></th>
       <th><%= sortable "invoice_number", "Invoice Number" %></th>
@@ -39,7 +39,7 @@
       <th><%= sortable "due_date", "Due Date" %></th>
       <th><%= sortable "invoice_curr", "Invoice Currency" %></th>
       <th><%= sortable "invoice_amount", "Invoice Amount" %></th>
-      <th><%= sortable "status", "Invoice Status" %></th>
+      <th><%= sortable "status", "Offer Status" %></th>
       <th><%= sortable "supplier_email", "Offer Sent to" %></th>
       <th><%= sortable "offer_sent_date", "Offer Sent Date" %></th>
       <th><%= sortable "prop_settlement_date", "Proposed Settlement Date" %></th>
