--- a/app/views/pins/_form.html.erb
+++ b/app/views/pins/_form.html.erb
@@ -12,7 +12,7 @@
   <% end %>
 
   <div class="form-group">
-    <%= f.label :ref %>
+    <%= f.label "Your Invoice Ref" %>
     <%= f.text_field :ref, class: "form-control" %>
   </div>
 
@@ -64,6 +64,8 @@
   <% if !@pin.status %>
     <%= f.hidden_field :status, :value => "imported" %>
   <% end %>
+
+  <%= f.hidden_field :customer_name, :value => @pin.user.company %>
 
 
   <%= f.text_field :offer_amount, class: "form-control" %>
