offer accepting rejecting ok

--- a/app/views/pins/offersreceived.html.erb
+++ b/app/views/pins/offersreceived.html.erb
@@ -20,8 +20,8 @@
       <th><%= sortable "prop_settlement_date", "Proposed Settlement Date" %></th>
       <th><%= sortable "offer_amount", "New Offer Amount" %></th>
       <th><%= sortable "saving", "Requested Discount" %></th>
-      <th>Action</th>
-      <th>Action Date</th>
+      <th>Available Actions</th>
+      <th><%= sortable "offer_accepted_date", "Action Date" %></th>
     </tr>
   </thead>
   <tbody>
