--- a/app/views/offer_mailer/offer_email.html.erb
+++ b/app/views/offer_mailer/offer_email.html.erb
@@ -1,7 +1,12 @@
-Early payment discount is available for thie invoice.
+<div>Dear <%= @pin.suppler_ref %>,<div>
 
 
-<table>
+I am a loser who is spamming like crazy.
+
+From,
+
+Paul Roiter.
+<!-- <table>
   <thead>
     <tr>
       <th>ref</th>
@@ -34,4 +39,4 @@ Early payment discount is available for thie invoice.
         <th><%= @pin.offer_amount %></th>
       </tr>
   </tbody>
-</table>
+</table> -->
