--- a/app/views/offer_mailer/offer_email.text.erb
+++ b/app/views/offer_mailer/offer_email.text.erb
@@ -1,5 +1,7 @@
-plain text
+Dear <%= @pin.suppler_ref %>,
 
+I am a loser who is spamming like crazy.
 
-  offer
-  <%= @pin %>
+From,
+
+Paul Roiter.
