--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -75,8 +75,11 @@
 
 <br><br>
 
-<%#= f.button "Delete Multiple", data: { confirm: 'Are you sure?' }, class: "btn btn-primary" %>
+<%= link_to "Send Email to all", :action => "sendEmails" %>
+<%#= button "Send Emails", data: { confirm: 'Are you sure?' }, class: "btn btn-primary" %>
 <%# end %>
+
+
 
 <br><br>
 
