--- a/app/views/offer_mailer/offer_email.html.erb
+++ b/app/views/offer_mailer/offer_email.html.erb
@@ -1,42 +1,20 @@
-<div>Dear <%= @pin.suppler_ref %>,<div>
+Hi <%= @pin.suppler_ref %> - apologies for email out of the blue.
 
+<p>I am writing to you as I believe my company Invoicely can deliver major savings to your bottom line. This might sound sales-y but there is no gimmick here.</p>
 
-I am a loser who is spamming like crazy.
+<p>Invoicely, provides software to manage dynamic discounting - where you can offer your suppliers early payment on approved invoices, in return for a discount on the invoice value.</p>
 
-From,
+<p>There are 3 major benefits for you:</p>
 
-Paul Roiter.
-<!-- <table>
-  <thead>
-    <tr>
-      <th>ref</th>
-      <th>Supplier Ref</th>
-      <th>Supplier Name</th>
-      <th>invoice no</th>
-      <th>inv desc</th>
-      <th>invoice date</th>
-      <th>due date</th>
-      <th>amount</th>
-      <th>status</th>
-      <th>your email</th>
-      <th>new opffer date</th>
-      <th>offer amount</th>
-    </tr>
-  </thead>
-  <tbody>
-      <tr>
-        <th><%= @pin.ref %></th>
-        <th><%= @pin.suppler_ref %></th>
-        <th><%= @pin.suppler_name %></th>
-        <th><%= @pin.invoice_number %></th>
-        <th><%= @pin.description %></th>
-        <th><%= @pin.invoice_date %></th>
-        <th><%= @pin.due_date %></th>
-        <th><%= @pin.invoice_amount %></th>
-        <th><%= @pin.status %></th>
-        <th><%= @pin.supplier_email %></th>
-        <th><%= @pin.prop_settlement_date %></th>
-        <th><%= @pin.offer_amount %></th>
-      </tr>
-  </tbody>
-</table> -->
+<p>1) You earn better return on your cash vs earning interest until the end of the payment period. This turns your AP into a profit centre.</p>
+<p>2) You see this cash go straight into your bottom line.</p>
+<p>3) You maintain a healthy supply chain - your suppliers need cash and they don't want to borrow at high short-term rates.</p>
+
+<p>With our software you can plug in your desired APR and we send an email to the relevant supplier notifying them of the opportunity to take early payment. It's a win-win.</p>
+
+<p>Our company is currently in stealth mode, with launch planned for late Q4. We are currently looking for companies to work with us in the early stages of our business in return for free usage of the platform, worth £30k per annum.</p>
+
+<p>It would be great to have a quick call to discuss this with yourself or someone more appropriate from your team. Please let me know when would be convenient.</p>
+
+<p>Many thanks,</p>
+Paul
