--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -20,9 +20,9 @@
     <tr>
       <th><%= check_box_tag "select_all" %></th>
       <th><%= sortable "ref", "Your Invoice Ref" %></th>
-      <th><%= sortable "suppler_ref", "Supplier Ref" %></th>
-      <th><%= sortable "suppler_name", "Supplier Name" %></th>
-      <th><%= sortable "invoice_number", "Invoice Number" %></th>
+      <th><%= sortable "suppler_ref", "Supplier Ref (name)" %></th>
+      <th><%= sortable "suppler_name", "Supplier Name (email)" %></th>
+      <th><%= sortable "invoice_number", "Invoice Number (company name)" %></th>
       <th><%= sortable "description", "Description" %></th>
       <th><%= sortable "invoice_date", "Invoice Date" %></th>
       <th><%= sortable "due_date", "Due Date" %></th>
