--- a/app/views/offer_mailer/offer_email.html.erb
+++ b/app/views/offer_mailer/offer_email.html.erb
@@ -1,20 +1,12 @@
-Hi <%= @pin.suppler_ref %> - apologies for email out of the blue.
+<p>Dear <%= @pin.suppler_ref %>,
 
-<p>I am writing to you as I believe my company Invoicely can deliver major savings to your bottom line. This might sound sales-y but there is no gimmick here.</p>
+<p>Your suppliers need cash. You have cash sitting in the bank, earning close to zero interest!</p>
 
-<p>Invoicely, provides software to manage dynamic discounting - where you can offer your suppliers early payment on approved invoices, in return for a discount on the invoice value.</p>
+<p>Our company Invoicely has a solution. We provide software to enable you to send early payment offers to your suppliers in return for your chosen level of discount. Quite simply, we can help you earn double digit APR's on your cash whilst keeping your suppliers happy.</p>
 
-<p>There are 3 major benefits for you:</p>
+<p>What's even better is that we only charge you a % of savings made, so there is NO risk from your side.</p>
 
-<p>1) You earn better return on your cash vs earning interest until the end of the payment period. This turns your AP into a profit centre.</p>
-<p>2) You see this cash go straight into your bottom line.</p>
-<p>3) You maintain a healthy supply chain - your suppliers need cash and they don't want to borrow at high short-term rates.</p>
-
-<p>With our software you can plug in your desired APR and we send an email to the relevant supplier notifying them of the opportunity to take early payment. It's a win-win.</p>
-
-<p>Our company is currently in stealth mode, with launch planned for late Q4. We are currently looking for companies to work with us in the early stages of our business in return for free usage of the platform, worth £30k per annum.</p>
-
-<p>It would be great to have a quick call to discuss this with yourself or someone more appropriate from your team. Please let me know when would be convenient.</p>
+<p>We would love to tell you more over a phone call. Please let me know when would be convenient.</p>
 
 <p>Many thanks,</p>
 Paul
